# pyxis-manage

./: .gitignore  Cargo.toml  PKGBUILD
src/: chroot.rs  hookfile.rs  imagebuild.rs  lib.rs
src/providers/: alpm.rs  local.rs  mod.rs  recipe.rs
