[package]
name = "pyxis-manage"
version = "0.2.1"
authors = ["chordtoll <git@chordtoll.com>"]
edition = "2021"
description = "The pyxis package manager"
license = "MIT"
repository = "https://github.com/chordtoll/pyxis-manage"

[package.metadata.arch]
arch = ["x86_64"]

[dependencies]
clap = { version = "3.0.10", features = ["cargo"] }
alpm = "2.2.1"
lazy_static = "1.4.0"
curl = "0.4.42"
zstd = "0.10.0"
xz = "0.1.0"
tar = "0.4.38"
pyxis-parcel = "0.5.0"
passwd = "0.0.1"
nix = "0.23.1"
indicatif = "0.16.2"
indexmap = "1.8.0"
sys-mount = "1.3.0"
glob = "0.3.0"
tempfile = "3.3.0"
itertools = "0.10.3"
serde = "1.0.134"
serde_yaml = "0.8.23"
